Restructured the projected, removed CakeBuild, Removed SLN

--- a/Snitches/Snitches.csproj
+++ b/Snitches/Snitches.csproj
@@ -3,7 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-    <OutputPath>bin\$(Configuration)\Mods\mod</OutputPath>
+    <OutputPath>..\..\bin\$(Configuration)\Mods\Snitches</OutputPath>
+    <Configurations>Debug;Release;Debug All</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
@@ -37,10 +38,6 @@
     </Reference>
     <Reference Include="cairo-sharp">
       <HintPath>$(VINTAGE_STORY)/Lib/cairo-sharp.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="System.Data.SQLite">
-      <HintPath>$(VINTAGE_STORY)/Lib/System.Data.SQLite.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
